--- a/app/src/main/res/layout/activity_daily1.xml
+++ b/app/src/main/res/layout/activity_daily1.xml
@@ -98,6 +98,7 @@
         app:layout_constraintVertical_bias="0.25" />
 
     <!-- Keyboard -->
+    <!-- Keyboard -->
     <LinearLayout
         android:id="@+id/keyboardLayout"
         android:layout_width="0dp"
@@ -109,57 +110,62 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
-        <!-- First row - ADDED A FIXED HEIGHT -->
+        <!-- First row -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:gravity="center"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:weightSum="10">
 
-            <Button android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="Q" />
-            <Button android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="W" />
-            <Button android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="E" />
-            <Button android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="R" />
-            <Button android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="T" />
-            <Button android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="Y" />
-            <Button android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="U" />
-            <Button android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="I" />
-            <Button android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="O" />
-            <Button android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="P" />
+            <Button android:id="@+id/button_q" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="Q" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
+            <Button android:id="@+id/button_w" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="W" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
+            <Button android:id="@+id/button_e" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="E" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
+            <Button android:id="@+id/button_r" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="R" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
+            <Button android:id="@+id/button_t" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="T" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
+            <Button android:id="@+id/button_y" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="Y" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
+            <Button android:id="@+id/button_u" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="U" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
+            <Button android:id="@+id/button_i" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="I" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
+            <Button android:id="@+id/button_o" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="O" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
+            <Button android:id="@+id/button_p" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="P" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
         </LinearLayout>
 
-
+        <!-- Second row -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:gravity="center"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:weightSum="9">
 
-            <Button android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="A" />
-            <Button android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="S" />
-            <Button android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="D" />
-            <Button android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="F" />
-            <Button android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="G" />
-            <Button android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="H" />
-            <Button android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="J" />
-            <Button android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="K" />
-            <Button android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="L" />
+            <Button android:id="@+id/button_a" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="A" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
+            <Button android:id="@+id/button_s" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="S" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
+            <Button android:id="@+id/button_d" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="D" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
+            <Button android:id="@+id/button_f" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="F" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
+            <Button android:id="@+id/button_g" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="G" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
+            <Button android:id="@+id/button_h" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="H" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
+            <Button android:id="@+id/button_j" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="J" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
+            <Button android:id="@+id/button_k" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="K" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
+            <Button android:id="@+id/button_l" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="L" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
         </LinearLayout>
 
-        <!-- Third row - ADDED A FIXED HEIGHT -->
+        <!-- Third row -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:gravity="center"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:weightSum="10">
 
-            <Button android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="Z" />
-            <Button android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="X" />
-            <Button android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="C" />
-            <Button android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="V" />
-            <Button android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="B" />
-            <Button android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="N" />
-            <Button android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="M" />
+            <Button android:id="@+id/button_delete" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1.5" android:text="DEL" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp" />
+            <Button android:id="@+id/button_z" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="Z" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
+            <Button android:id="@+id/button_x" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="X" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
+            <Button android:id="@+id/button_c" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="C" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
+            <Button android:id="@+id/button_v" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="V" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
+            <Button android:id="@+id/button_b" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="B" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
+            <Button android:id="@+id/button_n" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="N" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
+            <Button android:id="@+id/button_m" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:text="M" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp"/>
+            <Button android:id="@+id/button_enter" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1.5" android:text="ENTER" android:insetTop="0dp" android:insetBottom="0dp" android:padding="0dp" />
         </LinearLayout>
 
     </LinearLayout>
