--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,14 +8,13 @@
     android:orientation="vertical"
     android:gravity="center_horizontal"
     android:background="#E8E8D9"
-    android:padding="24dp"
     tools:context=".Login">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="50dp"
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
@@ -23,10 +22,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="LOGIN"
-            android:textColor="#3D3B51"
-            android:textSize="32sp"
+            android:textColor="#051646"
+            android:textSize="40sp"
             android:textStyle="bold"
-            android:fontFamily="sans-serif-condensed"/>
+            android:fontFamily="@font/barriecito"/>
     </LinearLayout>
 
     <androidx.cardview.widget.CardView
@@ -35,6 +34,7 @@
         app:cardCornerRadius="16dp"
         app:cardElevation="8dp"
         android:layout_marginHorizontal="16dp"
+        android:layout_margin="30dp"
         app:cardBackgroundColor="#FFFFFF">
 
         <LinearLayout
@@ -47,7 +47,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Email"
-                android:textColor="#3D3B51"
+                android:fontFamily="@font/comic_relief"
+                android:textColor="#051646"
+                android:textSize="17dp"
                 android:layout_marginBottom="8dp"/>
 
             <EditText
@@ -56,17 +58,20 @@
                 android:layout_height="50dp"
                 android:background="@drawable/rounded_edit_text"
                 android:hint="Email"
+                android:fontFamily="@font/comic_relief"
                 android:paddingHorizontal="16dp"
                 android:inputType="textEmailAddress"
                 android:layout_marginBottom="16dp"
-                android:backgroundTint="#F5F5F5"
+                android:backgroundTint="#E2DEF1"
                 tools:ignore="Autofill" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Password"
-                android:textColor="#3D3B51"
+                android:textColor="#051646"
+                android:textSize="17dp"
+                android:fontFamily="@font/comic_relief"
                 android:layout_marginBottom="8dp"/>
 
             <EditText
@@ -75,12 +80,13 @@
                 android:layout_height="50dp"
                 android:background="@drawable/rounded_edit_text"
                 android:hint="Password"
+                android:fontFamily="@font/comic_relief"
                 android:paddingHorizontal="16dp"
                 android:inputType="textPassword"
                 android:drawableTint="#808080"
                 android:drawablePadding="16dp"
                 android:layout_marginBottom="16dp"
-                android:backgroundTint="#F5F5F5"
+                android:backgroundTint="#E2DEF1"
                 tools:ignore="Autofill" />
 
         </LinearLayout>
@@ -89,14 +95,16 @@
     <Button
         android:id="@+id/login_button"
         android:layout_width="200dp"
-        android:layout_height="60dp"
+        android:layout_height="70dp"
         android:layout_marginTop="32dp"
         android:background="@drawable/rounded_button"
         app:backgroundTint="#E2DEF1"
         android:text="Login"
         android:textAllCaps="false"
-        android:textColor="#3D3B51"
-        android:textSize="20sp"
+        android:textColor="#051646"
+        android:textStyle="bold"
+        android:textSize="30sp"
+        android:fontFamily="@font/comic_relief"
         android:elevation="8dp"/>
 
 </LinearLayout>
