--- a/app/src/main/res/layout/activity_muliplayer.xml
+++ b/app/src/main/res/layout/activity_muliplayer.xml
@@ -87,12 +87,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
-        android:fontFamily="@font/barriecito"
         android:gravity="center"
         android:text="Play local or start an\ninstant match"
         android:textColor="#051646"
         android:textSize="28sp"
         android:textStyle="bold"
+        android:fontFamily="@font/comic_relief"
         app:layout_constraintBottom_toTopOf="@id/localMatchButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -105,11 +105,11 @@
         android:layout_width="250dp"
         android:layout_height="70dp"
         android:backgroundTint="#C9BFFB"
-        android:fontFamily="@font/barriecito"
         android:text="Local Match"
         android:textColor="#051646"
         android:textSize="24sp"
         android:textStyle="bold"
+        android:fontFamily="@font/comic_relief"
         app:layout_constraintBottom_toTopOf="@id/randomMatchButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -121,11 +121,11 @@
         android:layout_height="70dp"
         android:layout_marginTop="24dp"
         android:backgroundTint="#C9BFFB"
-        android:fontFamily="@font/barriecito"
         android:text="Random Match"
         android:textColor="#051646"
         android:textSize="24sp"
         android:textStyle="bold"
+        android:fontFamily="@font/comic_relief"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
