--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -172,7 +172,7 @@
                         android:background="@android:color/transparent"
                         android:padding="12dp"
                         android:text="TheCharlieBrown320"
-
+                        android:fontFamily="@font/comic_relief"
                         android:textColor="#051646"
                         android:textSize="16sp" />
                 </androidx.cardview.widget.CardView>
@@ -193,6 +193,7 @@
                         android:background="@android:color/transparent"
                         android:padding="12dp"
                         android:text="charlieroux@gmail.com"
+                        android:fontFamily="@font/comic_relief"
                         android:textColor="#051646"
                         android:textSize="16sp" />
                 </androidx.cardview.widget.CardView>
@@ -263,6 +264,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="154"
+                            android:fontFamily="@font/comic_relief"
                             android:textColor="#051646"
                             android:textSize="28sp"
                             android:textStyle="bold" />
@@ -271,6 +273,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Games Played"
+                            android:fontFamily="@font/comic_relief"
                             android:textColor="#051646"
                             android:textSize="14sp" />
                     </LinearLayout>
@@ -287,6 +290,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="32"
+                            android:fontFamily="@font/comic_relief"
                             android:textColor="#051646"
                             android:textSize="28sp"
                             android:textStyle="bold" />
@@ -295,6 +299,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Win Streak"
+                            android:fontFamily="@font/comic_relief"
                             android:textColor="#051646"
                             android:textSize="14sp" />
                     </LinearLayout>
@@ -311,6 +316,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="73"
+                            android:fontFamily="@font/comic_relief"
                             android:textColor="#051646"
                             android:textSize="28sp"
                             android:textStyle="bold" />
@@ -319,6 +325,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Max Streak"
+                            android:fontFamily="@font/comic_relief"
                             android:textColor="#051646"
                             android:textSize="14sp" />
                     </LinearLayout>
@@ -330,6 +337,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:text="Guess Distribution"
+                    android:fontFamily="@font/comic_relief"
                     android:textColor="#051646"
                     android:textSize="16sp"
                     android:textStyle="bold" />
