--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,9 +35,9 @@
         android:layout_width="200dp"
         android:layout_height="60dp"
         android:background="@drawable/rounded_button"
-        app:backgroundTint="#9888D7"
+        app:backgroundTint="#E2DEF1"
         android:text="Register"
-        android:fontFamily="@font/comic_relief"
+        android:fontFamily="@font/barriecito"
         android:textStyle="bold"
         android:textAllCaps="false"
         android:textColor="#051646"
@@ -50,9 +50,9 @@
         android:layout_height="60dp"
         android:layout_marginTop="24dp"
         android:background="@drawable/rounded_button"
-        app:backgroundTint="#9888D7"
+        app:backgroundTint="#E2DEF1"
         android:text="Login"
-        android:fontFamily="@font/comic_relief"
+        android:fontFamily="@font/barriecito"
         android:textStyle="bold"
         android:textAllCaps="false"
         android:textColor="#051646"
