--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -10,7 +10,6 @@
     android:background="#E8E8D9"
     tools:context=".Register">
 
-    <!-- Title -->
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -29,7 +28,6 @@
             android:fontFamily="@font/barriecito"/>
     </LinearLayout>
 
-    <!-- Card with input fields -->
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -45,12 +43,11 @@
             android:orientation="vertical"
             android:padding="24dp">
 
-            <!-- Username -->
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Username"
-                android:fontFamily="@font/comic_relief"
+                android:fontFamily="@font/barriecito"
                 android:textColor="#051646"
                 android:textSize="17dp"
                 android:layout_marginBottom="8dp"/>
@@ -66,12 +63,11 @@
                 android:backgroundTint="#E2DEF1"
                 tools:ignore="Autofill" />
 
-            <!-- Email -->
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Email"
-                android:fontFamily="@font/comic_relief"
+                android:fontFamily="@font/barriecito"
                 android:textColor="#051646"
                 android:textSize="17dp"
                 android:layout_marginBottom="8dp"/>
@@ -88,12 +84,11 @@
                 android:backgroundTint="#E2DEF1"
                 tools:ignore="Autofill" />
 
-            <!-- Password -->
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Password"
-                android:fontFamily="@font/comic_relief"
+                android:fontFamily="@font/barriecito"
                 android:textColor="#051646"
                 android:textSize="17dp"
                 android:layout_marginBottom="8dp"/>
@@ -112,12 +107,11 @@
                 android:backgroundTint="#E2DEF1"
                 tools:ignore="Autofill" />
 
-            <!-- Language -->
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Language"
-                android:fontFamily="@font/comic_relief"
+                android:fontFamily="@font/barriecito"
                 android:textColor="#051646"
                 android:textSize="17dp"
                 android:layout_marginBottom="8dp"/>
@@ -134,7 +128,6 @@
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
-    <!-- Register button -->
     <Button
         android:id="@+id/signup_button"
         android:layout_width="200dp"
@@ -143,11 +136,24 @@
         android:background="@drawable/rounded_button"
         app:backgroundTint="#E2DEF1"
         android:text="Register"
-        android:fontFamily="@font/comic_relief"
+        android:fontFamily="@font/barriecito"
         android:textAllCaps="false"
         android:textColor="#051646"
         android:textStyle="bold"
         android:textSize="30sp"
         android:elevation="8dp"/>
+
+    <TextView
+        android:id="@+id/login_link"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="Already have an account? Login"
+        android:textColor="#051646"
+        android:textSize="18sp"
+        android:fontFamily="@font/comic_relief"
+        android:clickable="true"
+        android:focusable="true"
+        android:padding="8dp"/>
 
 </LinearLayout>
