--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -178,6 +178,7 @@
                     android:text="Discover who is online:"
                     android:textColor="#051646"
                     android:textSize="14sp"
+                    android:fontFamily="@font/comic_relief"
                     android:layout_marginStart="16dp"
                     android:layout_marginBottom="8dp"/>
 
@@ -203,12 +204,14 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:text="JohnDoeRayMe847"
+                            android:fontFamily="@font/comic_relief"
                             android:textColor="#051646"
                             android:textSize="18sp" />
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Online"
+                            android:fontFamily="@font/comic_relief"
                             android:textColor="#00AA00"
                             android:textSize="18sp"
                             android:textStyle="bold" />
@@ -224,12 +227,14 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:text="ThanksALotRachel109"
+                            android:fontFamily="@font/comic_relief"
                             android:textColor="#051646"
                             android:textSize="18sp" />
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Offline"
+                            android:fontFamily="@font/comic_relief"
                             android:textColor="#555555"
                             android:textSize="18sp" />
                     </LinearLayout>
@@ -244,12 +249,14 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:text="SamuellJacksonville123"
+                            android:fontFamily="@font/comic_relief"
                             android:textColor="#051646"
                             android:textSize="18sp" />
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Offline"
+                            android:fontFamily="@font/comic_relief"
                             android:textColor="#555555"
                             android:textSize="18sp" />
                     </LinearLayout>
@@ -264,12 +271,14 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:text="AdamOddAndEvens676"
+                            android:fontFamily="@font/comic_relief"
                             android:textColor="#051646"
                             android:textSize="18sp" />
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Online"
+                            android:fontFamily="@font/comic_relief"
                             android:textColor="#00AA00"
                             android:textSize="18sp"
                             android:textStyle="bold" />
@@ -285,12 +294,14 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:text="KrisIsTuff190"
+                            android:fontFamily="@font/comic_relief"
                             android:textColor="#051646"
                             android:textSize="18sp" />
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Offline"
+                            android:fontFamily="@font/comic_relief"
                             android:textColor="#555555"
                             android:textSize="18sp" />
                     </LinearLayout>
